--- a/src/main/resources/templates/atm.html
+++ b/src/main/resources/templates/atm.html
@@ -22,5 +22,10 @@ Authenticated user roles:
         <a href="/atm/withDrawl" > CASH withDrawl </a>
     </h1>
 </div>
+<div>
+    <h1>
+        <a href="/atm/fill" > CASH FILL </a>
+    </h1>
+</div>
 </body>
 </html>
