--- a/src/main/resources/templates/successFill.html
+++ b/src/main/resources/templates/successFill.html
@@ -8,13 +8,9 @@
 <body>
 
 <div>
-  <label>
-    pleas take your amount :
-    <span th:text="${withDrawlAmount}">
-    </span>
-  </label>
+
   <h1>
-    please don't forget take your card!
+   you fill your balance please don't forget take your card!
   </h1>
   <h1>
     <a href="/logout" >back to home page </a>
